# catalog-arquivos-unidades

./: .gitignore  AGENTS.md  README.md  alembic.ini  continue_session.txt  pyproject.toml
alembic/: env.py
alembic/versions/: 7b213cbb2deb_initial_tables.py
src/catalogador/: __init__.py  config.py
src/catalogador/cli/: __init__.py  main.py  report_commands.py  scan_commands.py  unit_commands.py
src/catalogador/db/: __init__.py  models.py  repository.py  session.py
src/catalogador/reports/: __init__.py  duplicates.py  export.py
src/catalogador/scanner/: __init__.py  filesystem.py  hasher.py
src/catalogador/utils/: __init__.py  exceptions.py  filters.py
tests/: conftest.py  test_filters.py  test_hasher.py  test_models.py  test_reports.py  test_scanner.py  test_units.py
